--- a/you'rewrong.html
+++ b/you'rewrong.html
@@ -18,7 +18,7 @@
 	<br>
 	<div class="bg-secondary">
 	<center><h1 style="font-size: 100;">YOU. ARE. WRONG.</h1></center>
-	<a href="GH_ICT9-Amethyst_Q3SW1_Jurado.html">
+	<a href="index.html">
 	<center><button class="btn btn-danger">Restart Quiz!</button></center>
 	</a>
 </body>
