--- a/gjob.html
+++ b/gjob.html
@@ -19,7 +19,7 @@
 	<div class="bg-secondary">
 	<center><h1 style="font-size: 100;">YOU. ARE. DONE!!!</h1></center>
 	<center><h1 style="font-size: 50;">CONGRATSS</h1></center>
-	<a href="GH_ICT9-Amethyst_Q3SW1_Jurado.html">
+	<a href="index.html">
 	<center><button class="btn btn-danger">You wanna restart?</button></center>
 	</a>
 </body>
